[project]
name = "symphony"
version = "0.1.0"
description = "Symphony orchestrator implementation"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
symphony = "symphony.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
